# FSR_FinalProject

./: .gitmodules  README.md  plot_rosbag.m  plot_ts.m  quasi_geom_controller.bag
Estimator/: C_fun.m  M_fun.m  Q_dot_fun.m  Q_fun.m  R_fun.m  estimator_script.m  multiplot.m  pdf_ts.m  singleplot.m  skew.m
ROS_bag/: pdf_ts.m  plot_rosbag.asv  plot_rosbag.m  plot_ts.m  singleplot.m
Video Demo/: apf_offline_allPoint.webm
[old]lidar/: OLD_ws_scenario.mat  UAV_Model.slx  UAV_Model.slx.original  UAV_Model.slxc  lidar_script.m
[old]ste_dynamic/: dynamic_APF.slx
apf_offline/: apf_offline.slx  apf_offline.slx.autosave  apf_offline.slxc  apf_offline_script.asv  (+3 more)
geometric_controller/: CMakeLists.txt  Es05.asv  ardrone.rviz  geometric_control_template.slx  geometric_control_template.slxc  geometric_script.m  multiplot.m  package.xml  planner_prof.m  singleplot.m  waypoints_generator.m
geometric_controller/include/geometric_controller/: utils_fun.h
geometric_controller/launch/: UAV.launch  UAV_with_joy.launch  apf_method.launch  geometric_controller.launch  geometric_controller_apf.launch  spawn_mav.launch
geometric_controller/models/cilindro_H3_R070/: model.config  model.sdf
geometric_controller/models/cilindro_H5_R020/: model.config  model.sdf
geometric_controller/models/cilindro_H5_R050/: model.config  model.sdf
geometric_controller/models/hemicyl/: visualize_custom_wind_field.py
geometric_controller/resource/: ardrone.yaml
geometric_controller/slprj/_jitprj/: jitEngineAccessInfo.mat  s5ZRW9R8lAaKFRNqAcqK9UG.l  s5ZRW9R8lAaKFRNqAcqK9UG.mat  s5i2ylTzYXRiw45Y2D8G7iF.mat  s773TBxg1VUlz6bYhrg49KD.l  s773TBxg1VUlz6bYhrg49KD.mat  s8OJ6ZemHNG9Ng4rPAuYE8F.l  s8OJ6ZemHNG9Ng4rPAuYE8F.mat  sGDhMxTAkCWy0vJGF4cUgJF.mat  sH7AYecJ60e4E84n7a0GFqG.l  sH7AYecJ60e4E84n7a0GFqG.mat  sJRENXsk2mzeYk0eN7y050F.mat  sL5R7zDmgKnur3JBylhH7bC.l  sL5R7zDmgKnur3JBylhH7bC.mat  sOWPy990DDbHnLL1EHzSKcE.l  sOWPy990DDbHnLL1EHzSKcE.mat  sSn2Vffsi06v95i604Eud3F.l  sSn2Vffsi06v95i604Eud3F.mat  scDYWofeJFEO8xcIzrmubOC.l  scDYWofeJFEO8xcIzrmubOC.mat  se9J9Z8aol0j2FfDLgEQ4L.mat  sexbBTv5LMHSkZDrhc7UwT.l  sexbBTv5LMHSkZDrhc7UwT.mat  sk2KdtrbaTdO07d9T2kziBF.l  sk2KdtrbaTdO07d9T2kziBF.mat  smchXzeHgRJJFUeWgJNeMBD.l  smchXzeHgRJJFUeWgJNeMBD.mat  smkM5gfwP99oqFXY17LFXHB.l  smkM5gfwP99oqFXY17LFXHB.mat  srBvD19XG5NWvbdO6Sr8HGE.l  srBvD19XG5NWvbdO6Sr8HGE.mat  stJGDt9xE2VzjnqWBiTzNEH.mat  sycJ0pxqMAUP32r8RXSyLFC.l  sycJ0pxqMAUP32r8RXSyLFC.mat
geometric_controller/slprj/_sfprj/EMLReport/: DSkouhYLXrtWhKFM42yXoG.mat  V0fgDnmxQzfhZCHbxxbSl.mat  WEu4mPekJ3V9nlF7O20gUB.mat  emlReportAccessInfo.mat  hOSOPkifd8G3RTDgvQlXOF.mat  s5ZRW9R8lAaKFRNqAcqK9UG.mat  s5i2ylTzYXRiw45Y2D8G7iF.mat  s773TBxg1VUlz6bYhrg49KD.mat  s8OJ6ZemHNG9Ng4rPAuYE8F.mat  sGDhMxTAkCWy0vJGF4cUgJF.mat  sH7AYecJ60e4E84n7a0GFqG.mat  sJRENXsk2mzeYk0eN7y050F.mat  sL5R7zDmgKnur3JBylhH7bC.mat  sOWPy990DDbHnLL1EHzSKcE.mat  sSn2Vffsi06v95i604Eud3F.mat  scDYWofeJFEO8xcIzrmubOC.mat  se9J9Z8aol0j2FfDLgEQ4L.mat  sexbBTv5LMHSkZDrhc7UwT.mat  sk2KdtrbaTdO07d9T2kziBF.mat  smchXzeHgRJJFUeWgJNeMBD.mat  smkM5gfwP99oqFXY17LFXHB.mat  srBvD19XG5NWvbdO6Sr8HGE.mat  stJGDt9xE2VzjnqWBiTzNEH.mat  sycJ0pxqMAUP32r8RXSyLFC.mat  sz8TVq1ly0qVOlPzRlNH0TF.mat
geometric_controller/slprj/_sfprj/UAV_Model/: amsi_serial.mat
geometric_controller/slprj/_sfprj/UAV_Model/_self/sfun/info/: binfo.mat
geometric_controller/slprj/_sfprj/geometric_control_template/: amsi_serial.mat
geometric_controller/slprj/_sfprj/geometric_control_template/_self/sfun/info/: binfo.mat
geometric_controller/slprj/_sfprj/precompile/: 2tPkM34Ftpz6qtzTz4D5iE.mat  3cO8OkEV10I1x749ABVdMH.mat  7XBNtZN5BFEjV8MKzVNnBF.mat  8B5LjdtxXUbGz5vGinKjlE.mat  8DugLA2Zr5AAomb0AtTlRE.mat  90nrzUgG32V4HbRMFIEcGH.mat  AiPHGCBOftxYUai6J2sKRG.mat  DiYswljPhTiFhkHiKNiMEG.mat  GKxsqoj8AdK1RGuMWD0hrG.mat  GYJ1oiVu6lXNZLqQhMQcMC.mat  HNSTj7MNDnu3y6bEakWMIB.mat  JM6idefk9LLmOjDauDbAmG.mat  JUQoImM2oPRzxHg5dcmAd.mat  LHI9g9luY7VmtmoUZbNjZD.mat  Lkin7rqZ9mk4mpqlUkHq0E.mat  OdQPiC3LGzkBdqUz8Vh7sC.mat  RpFUd0N5qJPcyf4ZipKBYH.mat  S0EnhrtTqZk4jL9Q5bzfVD.mat  TT47O5pqs1YIF9OLzYRZoH.mat  VvtLWV4rLWga2wwoBhFZaF.mat  ZemfkKUYnKzmvWoKVw5Qc.mat  autoInferAccessInfo.mat  ffDI5lpJoAu2C4fYT31EUB.mat  g8mYc5INjZ4J4NBpF1GXtE.mat  jn1Hv371Xbrdax44lXwXBE.mat  keCsAmEGgphJON3rKMqXGC.mat  pFfTguHkA7gKEfbVUn4j2.mat  pFzz4VLvo4SuOUKJ4lOxxC.mat  pjqK107WmGOSvOBPF8Eq7.mat  u7NPnDFPjv910GChP8yOxC.mat  uM76a76kBHU7yvxOgTaMBH.mat  wLriTuQCmDD8eaBGUKJiY.mat  xEsxEU6F3dfRr1yd4pRlM.mat  zelH9NkbEBI6Ehx3PdkKhD.mat
geometric_controller/slprj/sim/varcache/UAV_Model/: checksumOfCache.mat  varInfo.mat
geometric_controller/slprj/sim/varcache/UAV_Model/tmwinternal/: simulink_cache.xml
geometric_controller/slprj/sim/varcache/geometric_control_template/: checksumOfCache.mat  varInfo.mat
geometric_controller/slprj/sim/varcache/geometric_control_template/tmwinternal/: simulink_cache.xml
geometric_controller/src/: APF_method_offline.cpp  APF_method_online.cpp  inner_loop.cpp  momentum_estimator.cpp  outer_loop.cpp  outer_loop_apf.cpp  utils_fun.cpp
geometric_controller/urdf/: ardrone.xacro  ardrone_base.xacro  iris_base.xacro  lidar_gazebo_macro.xacro  mav_generic_odometry_sensor.gazebo
geometric_controller/worlds/: APF_world.world
(+760 files in other folders)
