<package format="2">
  <name>geometric_controller</name>
  <version>2.1.1</version>
  <description>The geometric_controller package</description>

  <maintainer email="fadri.furrer@mavt.ethz.ch">Fadri Furrer</maintainer>
  <maintainer email="mina.kamel@mavt.ethz.ch">Mina Kamel</maintainer>

  <author>Fadri Furrer</author>
  <author>Michael Burri</author>
  <author>Mina Kamel</author>
  <author>Janosch Nikolic</author>
  <author>Markus Achtelik</author>

  <license>ASL 2.0</license>

  <url type="website">https://github.com/ethz-asl/rotors_simulator</url>
  <url type="bugtracker">https://github.com/ethz-asl/rotors_simulator/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_msgs</depend>
  <depend>gazebo_plugins</depend>
  <depend>geometry_msgs</depend>
  <depend>joy</depend>
  <depend>mav_msgs</depend>
  <depend>roscpp</depend>
  <depend>rotors_gazebo_plugins</depend>
  <depend>sensor_msgs</depend>
  <depend>xacro</depend>
  <depend>laser_geometry</depend>
  <depend>message_filters</depend>
  <depend>tf</depend>


  

</package>